--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,10 @@ Thumbs.db
 
 # vscode
 .vscode/settings.json
+
+# mnist
+mnist.pkl
+t10k-images-idx3-ubyte.gz
+t10k-labels-idx1-ubyte.gz
+train-images-idx3-ubyte.gz
+train-labels-idx1-ubyte.gz
